--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,10 +1,23 @@
-<table class="table">
+<div
+  *ngIf="dataLoaded == false"
+  class="spinner-border text-primary"
+  role="status"
+>
+  <span class="visually-hidden">Loading...</span>
+</div>
+
+<table
+  *ngIf="dataLoaded != false"
+  class="table table-hover table-striped"
+  style="margin-top: 20px"
+>
   <thead>
     <tr>
       <th scope="col">#</th>
       <th scope="col">Name</th>
       <th scope="col">Category</th>
       <th scope="col">Unit Price</th>
+      <th scope="col">Unit in Stock</th>
     </tr>
   </thead>
   <tbody>
@@ -13,7 +26,7 @@
       <td>{{ product.productName }}</td>
       <td>{{ product.categoryId }}</td>
       <td>{{ product.unitPrice }}</td>
+      <td>{{ product.unitsInStock }}</td>
     </tr>
   </tbody>
 </table>
->
