--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,6 +1,14 @@
-<ul class="list-group" style="margin-top: 30px;">
-  <li class="list-group-item">Category Name</li>
-  <li *ngFor="let category of categories" class="list-group-item">
+<div
+  *ngIf="dataLoaded == false"
+  class="spinner-border text-primary"
+  role="status"
+>
+  <span class="visually-hidden">Loading...</span>
+</div>
+
+<ul class="list-group" style="margin-top: 30px" *ngIf="dataLoaded != false">
+  <li class="list-group-item">CATEGORIES</li>
+  <li *ngFor="let category of categories" class="list-group-item list-group-item-info">
     {{ category.categoryName }}
   </li>
 </ul>
