Category Filter added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,13 @@
 <div class="container">
   <app-navigator></app-navigator>
 
-  <div class="row">
+  <div class="row" style="margin-top: 1%;">
     <div class="col-3">
       <app-category></app-category>
     </div>
     <div class="col-9">
-      <app-product></app-product>
+      <!-- <app-product></app-product> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
-
-  <router-outlet></router-outlet>
 </div>
