--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -26,7 +26,7 @@
     [class]="getCurrentCategoryClass(category)"
     aria-current="true"
   >
-    {{ category.categoryName }}
+    {{ category.categoryName | uppercase}}
   </button>
 </div>
 
