--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -6,6 +6,8 @@
   <span class="visually-hidden">Loading...</span>
 </div>
 
+
+
 <table
   *ngIf="dataLoaded != false"
   class="table table-hover table-striped"
@@ -13,7 +15,12 @@
   <thead>
     <tr>
       <th scope="col" colspan="5" style="text-align: center; background-color: azure;" > 
-        <strong>PRODUCTS</strong> 
+         <h4> <strong> PRODUCTS </strong> </h4>
+      </th>
+      <th scope="col" colspan="2" style="text-align: center; background-color: azure;" > 
+        <div class="mb-0">
+          <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="Search Product">
+        </div>
       </th>
     </tr>
     <tr>
@@ -21,16 +28,28 @@
       <th scope="col">Name</th>
       <th scope="col">Category</th>
       <th scope="col">Unit Price</th>
+      <th scope="col">Added VAT</th>
       <th scope="col">Unit in Stock</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let product of products">
+    <tr *ngFor="let product of products | filterPipe:filterText ">
       <th scope="row">{{ product.productId }}</th>
-      <td>{{ product.productName }}</td>
-      <td>{{ product.categoryName }}</td>
-      <td>{{ product.unitPrice }}</td>
+      <td>{{ product.productName}}</td>
+      <td>{{ product.categoryName | uppercase }}</td>
+      <td>{{ product.unitPrice | currency:"TRY":"₺" }}</td>
+      <td>{{ product.unitPrice | vatAdded:18 | currency:"TRY":"₺"}}</td>
       <td>{{ product.unitsInStock }}</td>
+      <td>
+        <div class="btn-group-sm" role="group" aria-label="Basic mixed styles example">
+        <button (click)="addToFav(product)" type="button" class="btn btn-light">
+          <img src="/assets/img/fav_icon.png" width="30" height="30" />
+        </button>|<button (click)="addToCart(product)" type="button" class="btn btn-light">
+          <img src="/assets/img/cart_icon.png" width="30" height="30" />
+        </button>
+      </div>
+    </td>
     </tr>
   </tbody>
 </table>
