--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -14,8 +14,13 @@
 >
   <thead>
     <tr>
-      <th scope="col" colspan="5" style="text-align: center; background-color: azure;" > 
+      <th scope="col" colspan="4" style="text-align: center; background-color: azure;" > 
          <h4> <strong> PRODUCTS </strong> </h4>
+      </th>
+      <th scope="col" colspan="1" style="text-align: center; background-color: azure;" > 
+        <button routerLink="/products/add" type="button" class="btn btn-primary">
+          ADD
+        </button>
       </th>
       <th scope="col" colspan="2" style="text-align: center; background-color: azure;" > 
         <div class="mb-0">
