--- a/src/app/components/navigator/navigator.component.html
+++ b/src/app/components/navigator/navigator.component.html
@@ -3,7 +3,7 @@
   style="border-radius: 10px"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" routerLink="login">Sign-In</a>
     <button
       class="navbar-toggler"
       type="button"
